[gd_scene load_steps=11 format=2]

[ext_resource path="res://GameWorld/HUD.gd" type="Script" id=1]
[ext_resource path="res://HUD/Minecraft.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HUD/HealthBarProgress.png" type="Texture" id=3]
[ext_resource path="res://HUD/EnergyEmpty.png" type="Texture" id=4]
[ext_resource path="res://HUD/EnergyProgress.png" type="Texture" id=5]
[ext_resource path="res://HUD/HealthBarEmpty.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "Increase Score"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 32, 62, 32 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 32 ]
}

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.01
anchor_right = 0.5
anchor_bottom = 0.01
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "000"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
"anims/Increase Score" = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.005
anchor_top = 0.995
anchor_right = 0.005
anchor_bottom = 0.995
margin_top = -37.0
margin_right = 938.4
custom_constants/separation = 0

[node name="HealthBar" type="TextureProgress" parent="VBoxContainer"]
margin_right = 938.0
margin_bottom = 20.0
max_value = 10.0
value = 10.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 3 )
texture_progress_offset = Vector2( 0, 2 )

[node name="EnergyBar" type="TextureProgress" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 938.0
margin_bottom = 37.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="TweenHUD" type="Tween" parent="."]

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -83.0
margin_top = -20.0
custom_fonts/font = SubResource( 6 )
text = "Restart"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
